Finalizacao do curso

--- a/css-grid/alura-grid-layout/assets/css/style.css
+++ b/css-grid/alura-grid-layout/assets/css/style.css
@@ -7,15 +7,19 @@
         'conteudo'
         'rodape';
     grid-template-columns: auto;
-    grid-template-rows: 50px 100vh auto;
+    grid-template-rows: 50px auto auto;
 }
 
 .cabecalho {
     grid-area: cabecalho;
+    align-items: center;
+    padding: 0 2rem;
+    display: flex;
 }
 
 .conteudo {
     grid-area: conteudo;
+    padding: 0 2rem;
 }
 
 .rodape {
